# bumpster-py

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  TESTING.md  pyproject.toml  pytest.ini
.github/scripts/: validate_version.py
.github/workflows/: ci-cd.yml
bump_version/: __init__.py  _version.py  cli.py  validate_version.py  version_manager.py
docs/: test_dry_run.md
tests/: conftest.py  test_cli.py  test_integration.py  test_validate_version.py  test_version_manager.py
